# model-ai-methods

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
examples/: 10_analysis_dsair.ipynb
model_ai/methods/: abm.py  egt.py  networks.py
model_ai/methods/legacy_notebooks/: 01_methods.ipynb  02_payoffs1.ipynb  03_analytical_conditions.ipynb  data_utils.ipynb  model_utils.ipynb  models.ipynb  plots_utils.ipynb  references.ipynb  types.ipynb  utils.ipynb
model_ai/methods/models/: __init__.py  conditions.py  models.py  payoffs.py
model_ai/methods/utils/: __init__.py  data_utils.py  model_utils.py  plot_utils.py  prompt_utils.py  utils.py
