[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "model-ai-methods"
version = "0.1.1"
description = "Methods package for AI governance research: evolutionary game theory, agent-based modeling, and network analysis."
readme = "README.md"
requires-python = "<3.14,>=3.10"
license = { text = "MIT License" }
authors = [
    { name = "Paolo Bova", email = "paolobova@proton.me" }
]
keywords = ["AI Governance", "evolutionary game theory", "agent-based modeling", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

# Production dependencies: Minimal dependencies required for the package to run.
dependencies = [
    "more-itertools (>=10.6.0,<11.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "hypothesis (>=6.130.8,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "lark (>=1.2.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[project.urls]
Repository = "https://github.com/PaoloBova/model-ai-methods"
Documentation = "https://github.com/PaoloBova/model-ai-methods#readme"
IssueTracker = "https://github.com/PaoloBova/model-ai-methods/issues"

[tool.poetry]
packages = [{include = "model_ai"}]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.5"
itables = "^2.2.5"
rich = "^13.9.4"
dvc = "^3.59.2"

